<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:background="?attr/android:colorBackground">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/string_settings"
                android:elevation="0dp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:text="@string/info_string_appearance"
                android:textColor="?attr/colorPrimary" />
            <iiec.ditzdev.pixelify.components.SettingsLayout
                android:id="@+id/btnTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/string_theme"
                app:subtitle="@string/string_subtitle_theme"
                app:icon="@drawable/icon_theme" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/info_string_configuration"
                android:textColor="?attr/colorPrimary" />
            <iiec.ditzdev.pixelify.components.SettingsSwitch
                android:id="@+id/btnSetDanger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/string_detector_danger"
                app:subtitle="@string/string_subtitle_detector"
                app:icon="@drawable/icon_warning" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/info_string_information"
                android:textColor="?attr/colorPrimary" />
            <iiec.ditzdev.pixelify.components.SettingsLayout
                android:id="@+id/btnBug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/string_bug"
                app:subtitle="@string/string_subtitle_bug"
                app:icon="@drawable/icon_bug" />
            <iiec.ditzdev.pixelify.components.SettingsLayout
                android:id="@+id/btnLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/string_license"
                app:subtitle="@string/string_subtitle_license"
                app:icon="@drawable/icon_license" />
            <iiec.ditzdev.pixelify.components.SettingsLayout
                android:id="@+id/btnSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/string_src_github"
                app:subtitle="@string/string_subtitle_src"
                app:icon="@drawable/icon_github" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
